# off-key

./: .compose-env  .env  .env.example  .env.ingress.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  SETUP.md  docker-compose.cluster.yml  docker-compose.ingress.yml  docker-compose.qa-swarm.yml  docker-compose.swarm.yml  docker-compose.yml  requirements.txt
backend/: .dockerignore  .dockerignore.mqtt  Dockerfile  Dockerfile.old  README.md  entrypoint.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/api/: main.py
backend/api/auth/: models.py  routes.py
backend/api/clients/: abstract.py  pionix.py
backend/app/: main.py
backend/app/api/v1/: auth.py  charger.py  chargers.py  routes.py  services.py  telemetry.py  user.py
backend/app/clients/: base.py  pionix.py
backend/app/core/: config.py  logs.py
backend/app/core/client/: pionix.py
backend/app/db/: base.py  database.py  init_db.py  models.py  session.py
backend/app/db/crud/: auth.py
backend/app/schemas/: user.py  users.py
backend/app/services/: auth.py  chargers.py  chargers_sync.py  mqtt.py  services.py  telemetry.py  telemetry_sync.py  users.py
backend/app/utils/: dates.py  mail.py  strings.py
backend/infrastructure/docker/: Dockerfile.backend
backend/libs/core/: pyproject.toml
backend/libs/core/src/off_key_core/: __init__.py
backend/libs/core/src/off_key_core/clients/: __init__.py  base_client.py  pionix.py  provider.py
backend/libs/core/src/off_key_core/config/: __init__.py  app.py  auth.py  config.py  database.py  email.py  env.py  logging.py  logging.yaml  logs.py  pionix.py  runtime.py  services.py  telemetry.py  validation.py
backend/libs/core/src/off_key_core/db/: base.py  models.py  table_contracts.py
backend/libs/core/src/off_key_core/models/: __init__.py  monitoring.py  registry.py  schemas.py
backend/libs/core/src/off_key_core/schemas/: __init__.py  anomalies.py  favorites.py  radar.py  user.py
backend/libs/core/src/off_key_core/utils/: enum.py  mail.py  mqtt_topics.py  (+1 more)
backend/services/: data_fetcher.py  database.py  security.py
backend/services/adm/: pyproject.toml
backend/services/adm/src/off_key_anomaly_detection_manager/: __init__.py
backend/services/api/: Dockerfile  pyproject.toml
backend/services/api/gateway/: pyproject.toml
backend/services/api/src/off_key_api_gateway/: __init__.py  main.py  provider.py
backend/services/cache/mcrouter/: config.json
backend/services/db/sync/: pyproject.toml
backend/services/middleware/tactic/: pyproject.toml
backend/services/mqtt/: Dockerfile  pyproject.toml
backend/services/mqtt/bridge/: pyproject.toml
backend/services/mqtt/broker/: README.md
backend/services/mqtt/proxy/: pyproject.toml
backend/services/mqtt/proxy/tests/: __init__.py  conftest.py  test_mqtt_async_events.py  test_mqtt_proxy_async_events.py  test_mqtt_proxy_router.py  test_mqtt_proxy_telemetry.py
backend/services/mqtt/radar/: pyproject.toml
backend/services/mqtt/radar/tests/: conftest.py  test_mqtt_async_events.py  test_mqtt_radar_async_events.py
backend/services/mqtt/simulator/: pyproject.toml
backend/services/mqtt/src/off_key_mqtt_proxy/: __init__.py  __main__.py  charger_discovery.py  config.py  facade.py  main.py  proxy.py  router.py  telemetry.py
backend/src/: main.py
backend/src/api/v1/: auth.py  routes.py  services.py  telemetry.py
backend/src/core/: config.py  logs.py
backend/src/core/client/: pionix.py
backend/src/db/: models.py
backend/src/off_key/: main.py
backend/src/off_key/api/: middleware.py  rate_limiter.py
backend/src/off_key/api/v1/: anomalies.py  auth.py  charger.py  favorites.py  routes.py  services.py  telemetry.py
backend/src/off_key/core/: config.py  dependencies.py  health_checks.py  logs.py
backend/src/off_key/core/client/: pionix.py  pionix_config.py
backend/src/off_key/db/: base.py  models.py
backend/src/off_key/schemas/: anomalies.py  favorites.py  user.py
backend/src/off_key/scripts/: create_admin.py
backend/src/off_key/services/: async_docker.py  auth.py  background_sync.py  chargers.py  mqtt.py  services.py  telemetry.py
backend/src/off_key/services/mqtt/: __init__.py  __main__.py  api_key_auth.py  auth.py  charger_discovery.py  config.py  database_writer.py  facade.py  firebase_auth.py  health_monitor.py  interfaces.py  message_router.py  mqtt_client.py  proxy_service.py  telemetry_writer.py
backend/src/off_key/services/resources/: Dockerfile  proxy.py  service-requirements.txt
backend/src/off_key/utils/: date.py  enum.py  mail.py  string.py
backend/src/services/: auth.py  chargers.py  services.py  telemetry.py
backend/tasks/: email.py
backend/tests/: __init__.py  conftest.py  test_admin_models_security.py  test_anomaly_detection.py  test_anomaly_identity_constraints.py  test_auth_settings_validation.py  test_checkpoint_manager.py  test_core_modular_config.py  test_core_settings_validation.py  test_database_writer.py  test_database_writer_semantics.py  test_db_sync_api_modes.py  test_db_sync_schema_init_order.py  test_email_settings_validation.py  test_gateway_anomaly_value_type.py  test_gateway_auth_token_types.py  test_gateway_health.py  test_gateway_login_user_id_contract.py  test_gateway_tactic_errors.py  test_logging_utils.py  test_message_processor.py  test_monitoring_evidence_service.py  test_monitoring_performance_config_forwarding.py  test_monitoring_sensor_ownership.py  test_mqtt_proxy_bridge_supervision.py  test_mqtt_topic_extractor.py  test_multisensor_cadence_simulation.py  test_radar_orchestration_cleanup.py  test_radar_reconciliation_cleanup.py  test_radar_runtime_settings.py  test_radar_service_alignment_mode.py  test_radar_service_lifecycle.py  test_sensor_state_cache.py  test_service_config_pydantic_models.py  test_static_conformal_detection.py  test_static_model_catalog.py  test_tactic_data_api_architecture.py  test_tactic_model_instantiation_boundary.py  test_tactic_settings.py  test_topic_parser.py  (+1 more)
backend/tests/support/: __init__.py  runtime_cache.py
(+313 files in other folders)
