[project]
name = "off-key"
version = "0.1.0"
description = "Real-time Anomaly Detection Platform"
authors = [
    { name = "Oliver Hennhoefer", email = "oliver.hennhoefer@mail.de" },
    { name = "Fernando Saba", email = "fernando.saba@gmx.de" }
]
maintainers = [
    { name = "Oliver Hennhoefer", email = "oliver.hennhoefer@mail.de" },
    { name = "Fernando Saba", email = "fernando.saba@gmx.de" }
]
keywords = ["anomaly detection", "predictive maintenance", "monitoring"]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    # See https://github.com/sabuhish/fastapi-mail/issues/236
    "pydantic~=2.11.0",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "typing"}
]
test = [
    "pytest>=9.0.3,<10",
    "pytest-cov >=6.3.0",
    "pytest-asyncio >=0.23.0",
    "pytest-timeout >=2.2.0",
]
lint = [
    "ruff",
    "pre-commit",
]
typing = [
    # "ty"
]

[tool.uv.workspace]
members = [
    "libs/*",
    "services/api/*",
    "services/db/*",
    "services/mqtt/*",
    "services/middleware/*"
]
exclude = [
    "services/mqtt/broker"
]

[project.urls]
"Homepage" = "https://github.com/DataDrivenSustainabilitySolutions/off-key"
"Bugs" = "https://github.com/DataDrivenSustainabilitySolutions/off-key/issues"

[tool.black]
line-length = 88
target-version = ['py312']

extend-exclude ='''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.pants\.d
  | \.pytype
  | \.ruff_cache
  | \.svn
  | \.tox
  | \.venv
  | __pypackages__
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | venv
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["."]
include = ["*.py", "*.pyi", "*.ipynb", "**/pyproject.toml"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors (excluding some stylistic ones handled by formatters)
    "F",  # Pyflakes
]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
