[project]
name = "off-key-anomaly-detection-manager"
version = "0.1.0"
description = "Anomaly Detection Manager for off-key platform"
authors = [
    { name = "Oliver Hennhoefer", email = "oliver.hennhoefer@mail.de" },
    { name = "Fernando Saba", email = "fernando.saba@gmx.de" }
]
maintainers = [
    { name = "Oliver Hennhoefer", email = "oliver.hennhoefer@mail.de" },
    { name = "Fernando Saba", email = "fernando.saba@gmx.de" }
]
keywords = ["off-key", "dynamic", "anomaly", "detection", "container", "management", "telemetry"]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
off-key-core = { workspace = true }
