[project]
name = "off-key-api-gateway"
version = "0.1.0"
description = "API Gateway for off-Key platform"
authors = [
    { name = "Oliver Hennhoefer", email = "oliver.hennhoefer@mail.de" },
    { name = "Fernando Saba", email = "fernando.saba@gmx.de" }
]
maintainers = [
    { name = "Oliver Hennhoefer", email = "oliver.hennhoefer@mail.de" },
    { name = "Fernando Saba", email = "fernando.saba@gmx.de" }
]
keywords = ["off-key", "api", "gateway", "fastapi"]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "off-key-core[auth]",
    "apscheduler>=3.11.0",
    "docker>=7.1.0",
    "fastapi[all]>=0.115.8",
    "fastapi-mail>=1.4.2",
    "slowapi>=0.1.9",
    "uvicorn>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/off_key_api_gateway"]