[project]
name = "off-key-api-gateway"
version = "0.1.0"
description = "API Gateway for off-key platform"
authors = [
    { name = "Oliver Hennhoefer", email = "oliver.hennhoefer@mail.de" },
    { name = "Fernando Saba", email = "fernando.saba@gmx.de" }
]
maintainers = [
    { name = "Oliver Hennhoefer", email = "oliver.hennhoefer@mail.de" },
    { name = "Fernando Saba", email = "fernando.saba@gmx.de" }
]
keywords = ["off-key", "api", "gateway", "fastapi"]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "off-key-core",
    "bcrypt==4.0.1",
    "python-jose>=3.4.0",
    "passlib>=1.7.4",
    "fastapi[all]>=0.115.8",
    "fastapi-mail>=1.4.2",
    "slowapi>=0.1.9",
    "uvicorn>=0.25.0",
    "aiohttp>=3.9.0",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
off-key-core = { workspace = true }
