[project]
name = "off-key-mqtt-bridge"
version = "0.1.0"
description = "MQTT Bridge service for off-key platform"
authors = [
    { name = "Oliver Hennhoefer", email = "oliver.hennhoefer@mail.de" },
    { name = "Fernando Saba", email = "fernando.saba@gmx.de" }
]
maintainers = [
    { name = "Oliver Hennhoefer", email = "oliver.hennhoefer@mail.de" },
    { name = "Fernando Saba", email = "fernando.saba@gmx.de" }
]
keywords = ["off-key", "mqtt", "bridge", "charger", "discovery"]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "off-key-core",
    "aiomqtt>=2.4.0",
    "websockets>=12.0",
]

[tool.uv.sources]
off-key-core = { workspace = true }
