[project]
name = "off-key-mqtt-proxy"
version = "0.1.0"
description = "MQTT Proxy service for off-key platform"
authors = [
    { name = "Oliver Hennhoefer", email = "oliver.hennhoefer@mail.de" },
    { name = "Fernando Saba", email = "fernando.saba@gmx.de" }
]
maintainers = [
    { name = "Oliver Hennhoefer", email = "oliver.hennhoefer@mail.de" },
    { name = "Fernando Saba", email = "fernando.saba@gmx.de" }
]
keywords = ["off-key", "mqtt", "proxy", "telemetry"]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "off-key-core",
    "paho-mqtt>=2.1.0",
    "asyncio-mqtt>=0.16.1",
    "structlog>=23.2.0",
    "psutil>=5.9.8",
    "uvicorn>=0.25.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "pytest >=8.1.1,<9",
    "pytest-cov >=6.3.0",
    "pytest-asyncio >=0.23.0",
    "pytest-timeout >=2.2.0"
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
off-key-core = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=off_key_mqtt_proxy",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "asyncio: mark test as async",
    "integration: mark test as integration test",
    "unit: mark test as unit test",
]
timeout = 30

[tool.coverage.run]
source = ["off_key_mqtt_proxy"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
